# Digital-Twin-for-Autonomous-Supply-Robot

./: README.md
Hospital_Robot/dashboard/: app.py
Hospital_Robot/dashboard/templates/: dashboard.html
Hospital_Robot/install/: local_setup.sh  setup.sh
Hospital_Robot/install/hospital_robot/lib/hospital_robot/: robot_node
Hospital_Robot/install/hospital_robot/share/hospital_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Hospital_Robot/ml_model/: model_metadata.json  stock_model.pkl  test_astar.py  train_model.py
Hospital_Robot/src/hospital_robot/: package.xml  setup.cfg  setup.py
Hospital_Robot/src/hospital_robot/hospital_robot/: robot_node.py
Hospital_Robot/src/hospital_robot/launch/: hospital.launch.py
Hospital_Robot/src/hospital_robot/resource/: robot.urdf
Hospital_Robot/src/hospital_robot/worlds/: hospital.world
